Bug fixes, fixed spacing between title and dates in dialog title bars, change page breaks on reports

--- a/public_html/css/Reports.css
+++ b/public_html/css/Reports.css
@@ -34,7 +34,7 @@ div.dataTables_wrapper #quick_report_table
 
 div.dataTables_wrapper #financial_report_table
 {
-    width: 1540px;
+    width: 1470px;
     margin: 0 auto;
 }
 
